<resources>
    <string name="app_name">MyAide</string>
    <string name="pull_to_refresh">下拉更新</string>
    <string name="refreshing">正在更新…</string>
    <string name="leave_to_refresh">松手可更新</string>
    <string name="turn">%1$s转%2$s</string>
    <string name="version">1.0.0.0</string>
    <!--welcome-->
    <string name="aide_version">生活助手 v%1$s</string>
    <string name="aide_slogan">准时叫醒你的梦想</string>
    <string name="copyright">© 2016 咖枯. All Rights Reserved.</string>
    <string name="weather">天气</string>
    <string name="business">事务</string>
    <string name="trip">出行</string>
    <string name="more">更多</string>
    <string name="dash">--</string>
    <string name="loading">正在加载……</string>
    <string name="no">暂无</string>
    <string name="dash_degree">--℃</string>
    <string name="yesterday">昨天</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>
    <string name="the_day_of_tomorrow">后天</string>
    <string name="days_forecast">多天预报</string>
    <string name="life_index">生活指数</string>
    <string name="umbrella">雨伞</string>
    <string name="ultraviolet_rays">紫外线</string>
    <string name="dress">穿衣</string>
    <string name="cold">感冒</string>
    <string name="morning_exercise">晨练</string>
    <string name="sport">运动</string>
    <string name="car_wash">洗车</string>
    <string name="air_cure">晾晒</string>
    <string name="no_data">暂无数据</string>
    <string name="internet_error">网络异常,请检查网络设置</string>
    <string name="location_fail">自动定位失败</string>
    <string name="auto_location">自动定位</string>
    <string name="can_not_find_current_location">无法获取当前位置,请手动添加城市</string>
    <string name="auto_location_error_retry">自动定位失败,请重试</string>
    <string name="get_weather_message_fail">获取天气信息失败</string>
    <string name="city_weather_update_time">%1$s更新时间</string>
    <string name="address_weather_city">http://wthrcdn.etouch.cn/WeatherApi?city=%s</string>
    <string name="alarm">%1$s预警</string>
    <string name="release_time">%1$s发布</string>
    <string name="update_time">%1$s发布</string>
    <string name="update_time2">昨天%1$s发布</string>
    <string name="update_time3">前天%1$s发布</string>
    <string name="update_time4">%1$s天前发布</string>
    <string name="data_void">数据过期</string>
    <string name="aqi">%1$s %2$s</string>
    <string name="humidity">湿度 %1$s</string>
    <string name="date">%1$s/%2$s</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>


    <!-- 城市管理，添加城市 -->
    <string name="set_default">设为默认</string>
    <string name="my_default">默认</string>
    <string name="add_city_fail">添加城市失败，请重试</string>
    <string name="add_location_fail">添加自动定位失败，请重试</string>
    <string name="refresh_fail">城市（%1$s）刷新失败</string>
    <string name="city_manage">城市管理</string>
    <string name="add_city">添加城市</string>
    <string name="hot_city">热门城市</string>
    <string name="more_city">更多城市</string>
    <string name="back">返回</string>
    <string name="china">中国</string>
    <string name="now_loading">正在加载，请稍候…</string>
    <string name="now_locating">正在定位，请稍候…</string>
    <string name="city_already_added">城市（%1$s）已添加</string>
    <string name="location_already_added">自动定位已添加</string>
    <string name="prompt">提示</string>
    <string name="retry">重试</string>
    <string name="input_city_name">请输入城市名称或拼音</string>
    <string name="no_matched_city">没有符合条件的城市</string>
    <string name="search_trip">搜地点、公交、路线</string>
    <string name="search">搜索</string>
    <string name="gowhere">路线</string>
    <string name="clear_histoy">清除记录</string>
    <string name="nearby">附近</string>
    <string name="navigate">导航</string>
    <string name="distance_m">%s 米</string>
    <string name="distance_km">%1$3.3f 千米</string>
    <string name="nearbyserver">周边服务</string>
    <string name="search_neary">搜周边</string>
    <string name="call_phone">电话</string>
    <string name="detial_message">详情信息</string>
    <string name="rating_all">%1$1.1f分</string>
    <string name="more_detail">更多详情</string>
    <string name="constellation">星&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;座</string>
    <string name="today_luck">今日运势</string>
    <string name="search_in_nearby">在\"%s\"附近搜索</string>
</resources>
