<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/llyt_activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.view.ViewPager
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="54dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_gravity="bottom"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/tab_weather"
            style="@style/tab_llyt">

            <TextView
                android:id="@+id/tv_weather"
                style="@style/tab_tv"
                android:text="@string/weather"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_business"
            style="@style/tab_llyt">

            <TextView
                android:id="@+id/tv_business"
                style="@style/tab_tv"
                android:text="@string/business"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_trip"
            style="@style/tab_llyt">

            <TextView
                android:id="@+id/tv_trip"
                style="@style/tab_tv"
                android:text="@string/trip"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/tab_more"
            style="@style/tab_llyt">

            <TextView
                android:id="@+id/tv_more"
                style="@style/tab_tv"
                android:text="@string/more"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>