<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.baidu.mapapi.map.MapView
        android:id="@+id/mapview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </com.baidu.mapapi.map.MapView>

    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_search_city_edit_text"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/search_city_edit_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:drawableLeft="@drawable/ic_search"
            android:drawablePadding="2dp"
            android:gravity="center_vertical"
            android:paddingBottom="3dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="3dp"
            android:singleLine="true"
            android:text="@string/search_trip"
            android:textColor="@color/white_trans90"
            android:textColorHint="@color/white_trans60"
            android:textCursorDrawable="@drawable/cursor_search_city"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/clear_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingRight="5dp"
            android:src="@drawable/ic_clear"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/show_menue"
        android:layout_width="@dimen/dp_250"
        android:layout_height="@dimen/dp_40"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="@dimen/dp_5"
        android:background="@drawable/bg_float_menue_layout">

        <TextView
            android:id="@+id/nearby"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="@dimen/dp_5"
            android:text="@string/nearby"
            android:textColor="@color/black_trans50"
            android:drawableLeft="@drawable/icon_location"
            android:textSize="@dimen/medium">

        </TextView>

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginBottom="@dimen/dp_5"
            android:background="@color/black_trans40" />

        <TextView
            android:id="@+id/gowhere"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="@dimen/dp_5"
            android:drawableLeft="@drawable/icon_road"
            android:text="@string/gowhere"
            android:textColor="@color/black_trans50"
            android:textSize="@dimen/medium">

        </TextView>

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginBottom="@dimen/dp_5"
            android:background="@color/black_trans40" />

        <TextView
            android:id="@+id/navigate"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:layout_weight="1"
            android:drawableLeft="@drawable/icon_navigation"
            android:gravity="center"
            android:paddingLeft="@dimen/dp_5"
            android:text="@string/navigate"
            android:textColor="@color/black_trans50"
            android:textSize="@dimen/medium">

        </TextView>
    </LinearLayout>
</FrameLayout>