<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/trip_search_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.aide.chenpan.myaide.activity.TripSearchActivity">

    <RelativeLayout style="@style/action_llyt">

        <ImageView
            android:id="@+id/action_return"
            style="@style/action_icon"
            android:layout_alignParentLeft="true"
            android:contentDescription="@null"
            android:src="@drawable/ic_action_previous_item" />

        <TextView
            android:id="@+id/action_title"
            style="@style/action_title"
            android:text="@string/search" />

    </RelativeLayout>

    <View style="@style/divider_line_wea" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/search_button"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_30"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_search_bg"
            android:gravity="center"
            android:paddingBottom="3dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="3dp"
            android:text="@string/search"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="gone"
          />

        <LinearLayout
            android:id="@+id/search_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/search_button"
            android:background="@drawable/bg_search_city_edit_text"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/search_city_edit_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:drawableLeft="@drawable/ic_search"
                android:drawablePadding="2dp"
                android:hint="@string/search_trip"
                android:imeOptions="actionSearch"
                android:paddingBottom="3dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="3dp"
                android:singleLine="true"
                android:textColor="@color/white_trans90"
                android:textColorHint="@color/white_trans60"
                android:textCursorDrawable="@drawable/cursor_search_city"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/clear_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingRight="5dp"
                android:src="@drawable/ic_clear"
                android:visibility="gone" />
        </LinearLayout>

    </RelativeLayout>

    <View
        style="@style/divider_line_wea"
        android:layout_marginTop="5dp" />

    <RelativeLayout
        android:id="@+id/show_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/list_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/search_recy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            </android.support.v7.widget.RecyclerView>

            <View
                style="@style/divider_line_wea"
                android:layout_marginTop="5dp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/histoy_recy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5">

            </android.support.v7.widget.RecyclerView>

            <View style="@style/divider_line_wea" />

            <TextView
                android:id="@+id/clear_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/clear_histoy"
                android:textColor="@color/white" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/search_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

        </android.support.v7.widget.RecyclerView>
    </RelativeLayout>
</LinearLayout>
